# github-actions

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  github-actions.cabal
.github/workflows/: haskell-ci.yml
lib/github/actions/: .ghci  github-actions.cabal
lib/github/actions/src/Language/Github/Actions/: Job.hs  Permissions.hs  Shell.hs  Step.hs  Types.hs  Workflow.hs
lib/github/actions/src/Language/Github/Actions/Service/: Id.hs
lib/github/actions/src/Language/Github/Actions/Step/: With.hs
lib/github/actions/test/Language/Github/Actions/: WorkflowTest.hs
lib/github/actions/test/golden/: configuration-main.hs.txt  configuration-main.yml
src/Language/Github/Actions/: Concurrency.hs  Defaults.hs  Internal.hs  Job.hs  JobNeeds.hs  Permissions.hs  RunIf.hs  Service.hs  Shell.hs  Step.hs  UnstructuredMap.hs  Workflow.hs
src/Language/Github/Actions/Job/: Container.hs  Environment.hs  Id.hs  Needs.hs  Strategy.hs
src/Language/Github/Actions/Service/: Id.hs
src/Language/Github/Actions/Step/: Id.hs  With.hs
src/Language/Github/Actions/Workflow/: Trigger.hs
test/: Main.hs
test/Language/Github/Actions/: WorkflowTest.hs
test/golden/: configuration-main.hs.txt  configuration-main.yml  issue-8-boolean-if.golden.yml  issue-8-boolean-if.hs.txt  issue-8-boolean-if.yml  issue-8-numeric-retention.golden.yml  issue-8-numeric-retention.hs.txt  issue-8-numeric-retention.yml  issue-8-string-needs.golden.yml  issue-8-string-needs.hs.txt  issue-8-string-needs.yml
