cabal-version:      2.2
name:               github-actions
version:            0.0.0.1
synopsis:           Github Actions
description:
  This library provides types and instances for serializing and deserializing
  Github Actions YAML, so that flows can be built and maintained in Haskell.

homepage:           http://github.com/bellroy/github-actions
bug-reports:        http://github.com/bellroy/github-actions/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Bellroy Tech Team <haskell@bellroy.com>
maintainer:         Bellroy Tech Team <haskell@bellroy.com>
copyright:          Copyright (C) 2025 Bellroy Pty Ltd
category:           Language
build-type:         Simple
extra-source-files:
  README.md
  test/golden/configuration-main.golden.yml
  test/golden/configuration-main.hs.txt
  test/golden/configuration-main.yml

tested-with:        GHC ==9.6.6 || ==9.8.2

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind

common deps
  build-depends:
    , aeson               ^>=2.2.3.0
    , base                >=4.14      && <4.22
    , containers          ==0.6.7     || ==0.6.8 || ==0.7   || ==0.8
    , hedgehog            ^>=1.5
    , hoist-error         ^>=0.3.0.0
    , string-interpolate  ^>=0.3.3
    , text                ==1.2.4.1   || ==2.0.2 || ==2.1.1
    , vector              ^>=0.13.0.0

library
  import:          opts, deps
  hs-source-dirs:  src

  -- cabal-fmt: expand src/
  exposed-modules:
    Language.Github.Actions.Concurrency
    Language.Github.Actions.Defaults
    Language.Github.Actions.Internal
    Language.Github.Actions.Job
    Language.Github.Actions.Job.Container
    Language.Github.Actions.Job.Environment
    Language.Github.Actions.Job.Id
    Language.Github.Actions.Job.Strategy
    Language.Github.Actions.Permissions
    Language.Github.Actions.Service
    Language.Github.Actions.Service.Id
    Language.Github.Actions.Shell
    Language.Github.Actions.Step
    Language.Github.Actions.Step.Id
    Language.Github.Actions.Step.With
    Language.Github.Actions.Workflow
    Language.Github.Actions.Workflow.Trigger

test-suite github-actions-tests
  import:             deps, opts
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -threaded
  other-modules:      Language.Github.Actions.WorkflowTest
  build-tool-depends: tasty-discover:tasty-discover ^>=4.2.2
  build-depends:
    , bytestring          ==0.11.5.3  || ==0.12.1.0
    , filepath            ^>=1.4.2.2
    , github-actions
    , pretty-show         ^>=1.10
    , tasty               ^>=1.5
    , tasty-discover      ^>=5.0.0
    , tasty-golden        ^>=2.3.5
    , tasty-golden-extra  ^>=0.1.0
    , tasty-hedgehog      ^>=1.4.0.0
    , tasty-hunit         ^>=0.10.0.3
    , yaml                ^>=0.11.11

source-repository head
  type:     git
  location: https://github.com/bellroy/github-actions.git
